      (Closes: #640366)
    + [NT] Accept --quiet in lintianrc as "quiet".  This option may
      not be used together with "verbose" in the config file.

  * lib/Util.pm:
    + [JW] Use LC_ALL rather than LANG, since LC_ALL overrules
      LANG.
    + [JW] Stricten the DCtrl parser to choke on some syntax errors
      that was silently ignored.  (Closes: #639516)
  * lib/Lintian/Collect.pm:
    + [JW,NT] Create the source field from the package field if the
      former is not present.  This fixes a number of false-positves
      introduced in 2.5.2.  (Closes: #640186)
  * lib/Lintian/Collect/Source.pm:
    + [NT] Removed a requirement for fields that was not needed.
    + [NT] Fixed "index" method for source packages.
  * lib/Lintian/Collect/Package.pm:
    + [JW,NT] Replace use of fail with croak.  (Closes: #637741)
  * lib/Lintian/Output.pm:
    + [NT] Merged "quiet" and "verbose" into "verbosity_level".
  * lib/Lintian/Profile.pm:
    + [NT] Reject profiles containing an unknown field.
  * lib/Lintian/Tag/Info.pm:
    + [JW] Create links for references pointing to files in html
      output.
    + [JW] Parse "#nnnnnn" references as links to Debian bugs.
  * lib/Lintian/Tag/Override.pm:
    + [NT] New file.
  * lib/Lintian/Tags.pm:
    + [NT] Track which tags had overrides that have been dropped.
    + [NT,RG] Collect override comments and print the comments
      above the overridden tag (with --show-overrides).  Thanks
      to Carl Fürstenberg for the report.  (Closes: #474590)
    + [NT] Remove the "respect-display-level" code.  It is not as
      useful as intended.
  * lib/Text_utils.pm:
    + [NT] Close <p>-tags in dtml_to_html since the output is used
      in xhtml (xml), where all tags must be closed properly.
      (Closes: #639292)
    + [NT] Remove the last new line (if any) before a </pre> in tag
      to reduce the empty space to the next paragraph.

  * man/lintian.pod.in:
    + [JW] Fixed some stray POD markup.  (Closes: #640705)